Updated action_mailer config

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,5 +54,9 @@
       <%= yield %>
     </div>
 
+    <% if user_signed_in? %>
+      <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
+    <% end %>
+
   </body>
 </html>
