--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
             <% if user_signed_in? %>
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                  <%= current_user.name %>
+                  <%= current_user.display_name %>
                   <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu" role="menu">
